cleanups; jdk 25 changes